[package]
name = "auth_"
version = "0.1.1"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/js0/site_struct.git"
homepage = "https://github.com/js0/site_struct/tree/main/auth_"
description = "auth_"
keywords = []

[features]
default = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
linkme = "0.3.35"
site_log = "0.1.9"
tosql = "0.1.16"

[dev-dependencies]
aok = "0.1.18"
log = "0.4.28"
log_init = "0.1.28"
static_init = "1.0.4"

[dev-dependencies.tokio]
version = "1.48.0"
features = ["macros", "rt", "rt-multi-thread", "time", "sync"]
