[package]
name = "genid"
version = "0.1.2"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/js0/site_struct.git"
homepage = "https://github.com/js0/site_struct/tree/main/genid"
description = "genid"
keywords = []

[features]
default = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
aok = "0.1.18"
intbin = "0.2.3"
log = "0.4.28"
log_init = "0.1.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
serde_yaml_bw = "2.5.1"
static_init = "1.0.4"
tosql = "0.1.16"
used = { version = "0.1.1", path = "../used" }
xboot = "0.1.29"
xkv = { version = "0.1.51", features = ["r"] }

[dependencies.tokio]
version = "1.48.0"
features = ["macros", "rt", "rt-multi-thread", "time", "sync"]

[package.metadata.cargo-machete]
ignored = ["serde_bytes"]
