[package]
name = "used"
version = "0.1.1"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/js0-site/site_struct.git"
homepage = "https://github.com/js0-site/site_struct/tree/main/used"
description = "used"
keywords = [ ]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [ "--cfg", "docsrs" ]

[features]
default = [ ]

[dev-dependencies]
aok = "0.1.18"
log = "0.4.28"
log_init = "0.1.28"
static_init = "1.0.4"

[dependencies.auth_]
version = "0.1.1"
path = "../auth_"

[dependencies.site_]
version = "0.1.1"
path = "../site_"
